--- a/config.json
+++ b/config.json
@@ -1,7 +1,6 @@
 {
   "settings": {
     "googleTrackId": "UA-75624684-1",
-    "operation_mode": "test",
-    "api": "http://whitephoenix.com.ua/wh/api"
+    "operation_mode": "test"
   }
 }
