--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "title": "WP переглядач",
+  "title": "MP переглядач",
   "category": "Apps",
-  "description": "Переглядач WP адмінки",
+  "description": "Переглядач MP видань",
   "main": "app.js",
   "dependencies": {
     "promise": "^6.1.0",
